--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ footer {
 </nav>
 <div class="clear"></div>
 <section>
-	<img src="./img/purdle.png">
+	<img src="./img/purdle.PNG">
 </section>
 <aside>
 	<ul>
